Add SEO requirements checklist and update dependencies
Added SEO_REQUIREMENTS.md with a comprehensive SEO, performance, and accessibility checklist for the portfolio site. Updated Next.js and related dependencies to 15.5.4, and other packages to latest versions. Added a 'clean' npm script to remove .next and out directories for build hygiene.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next build && next export",
+    "clean": "node -e \"const fs=require('fs'),p=['.next','out'];p.forEach(d=>fs.rmSync(d,{recursive:true,force:true}));console.log('Cleaned .next and out');\"",
     "serve": "npx serve@latest out"
   },
   "dependencies": {
