Update static export config for Next.js 15
README, package.json, and vercel.json updated to reflect new static export workflow using Next.js 15's `output: 'export'` configuration. Removes deprecated `next export` usage and clarifies build and deployment steps for Vercel. All API routes and runtime fetches are removed for full static output.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build && next export",
+    "export": "next build",
     "clean": "node -e \"const fs=require('fs'),p=['.next','out'];p.forEach(d=>fs.rmSync(d,{recursive:true,force:true}));console.log('Cleaned .next and out');\"",
     "serve": "npx serve@latest out"
   },
